--- a/Problema/assets/index.html
+++ b/Problema/assets/index.html
@@ -11,15 +11,15 @@
     <div id="navbar" role="navigation" class="navbar navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand logo">Strat Bootstrap</a>
+          <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle"><span class="sr-only">Toggle navigation </span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand logo">Strat Bootstrap</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav nav-ul navbar-right">
-            <li><a href="#servicio">SERVICES</a></li>
-            <li><a href="#portfolio">PORTFOLIO</a></li>
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#team">TEAM</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="#servicio" class="btn-nav">SERVICES</a></li>
+            <li><a href="#portfolio" class="btn-nav">PORTFOLIO</a></li>
+            <li><a href="#about" class="btn-nav">ABOUT</a></li>
+            <li><a href="#team" class="btn-nav">TEAM</a></li>
+            <li><a href="#contact" class="btn-nav">CONTACT</a></li>
           </ul>
         </div>
       </div>
